django_my_page_pawel_pedryc/static/pawel_pedryc/styles/base_mobile.css
/* ... */
.gh
{
  margin-top: .3125rem;
  margin-right: .125rem;
	width: 2.1875rem;
	height: 3.3125rem;
	background-color: #e38fff;
	float: right;
}

.gh:hover
{
	background-color: #9c07c9;
}


@media screen and (max-width: 68.75rem) {
  .gh {
  margin-top: .1563rem;
  margin-right: -0.5rem;
  width: .9375rem;
  height: 1.6563rem;
  background-color: #e38fff;
  float: right;
  }
}

.so
{
  margin-top: .3125rem;
  margin-right: .125rem;
	width: 2.1875rem;
	height: 3.3125rem;
	background-color: #71b0f4;
	float: right;
}

.so:hover
{
	background-color: #c84222;
}


@media screen and (max-width: 68.75rem) {
  .so {
  margin-top: .1563rem;
  margin-right: -0.5rem;
  width: .9375rem;
  height: 1.6563rem;
  background-color: #71b0f4;
  float: right;
  }
}

.pypi
{
  margin-top: .3125rem;
  margin-right: .125rem;
	width: 2.1875rem;
	height: 3.3125rem;
	background-color: #ffea2e;
	float: right;
}

.pypi:hover
{
	background-color: #3fc600;
}

@media screen and (max-width: 68.75rem) {
  .pypi {
  margin-top: .1563rem;
  margin-right: -0.5rem;
  width: .9375rem;
  height: 1.6563rem;
  background-color: #ffea2e;
  float: right;
  }
}

#footer-position{
  bottom: 0;
  position: absolute;
}

#footer-bg
{
  background-color: #000027;
}

.contact_envelop
{
  padding-top: 1.25rem;
  width: 1520px;
  border: .1875rem solid #007bff;
  border-radius: .9375rem;
	background-color: var(--article-item-bg-color);
	float: left;
}

/* Horizontal screen: */
@media screen and (min-width: 500px) {
  .contact_envelop
  {
  padding-top: .625rem;
  box-sizing: border-box;
  width: 90%;
  height: 110px;
  border: .1875rem solid #007bff;
  border-radius: .9375rem;
	background-color: var(--article-item-bg-color);
	float: left;
  }
}

@media screen and (max-width: 37.5rem) {
  .contact_envelop
  {
  padding-top: .625rem;
  box-sizing: border-box;
  width: 368px;
  height: 128px;
  border: .1875rem solid #007bff;
  border-radius: .9375rem;
	background-color: var(--article-item-bg-color);
	float: left;
  }
}

.contact_envelop_text
{
  font-size: 35.2px;
  color: var(--main-txt-color);
  text-align: center;
}

.contact_envelop_email_text
{

  padding: .1875rem;
  border: .1875rem solid #b2bcff;
  border-radius: 1.0625rem;
  background-color: var(--main-bg-color);
}


#animation 
{ 
    background-image: var(--animation-test);
    background-repeat: no-repeat; 
    height: 6.375rem; 
    width: 8.75rem; 
}

#animation-slider img ~ img {
  display: none;
}

